--- a/views/no_medals.haml
+++ b/views/no_medals.haml
@@ -1,30 +1,15 @@
-!!!
-%html
-  %head
-    %title Olympics
-    %script{:type => "text/javascript",
-            :src  => "js/bootstrap.min.js"}
-    %link(rel="stylesheet" href="css/bootstrap.min.css")
-    %link(rel="stylesheet" href="css/bootstrap-responsive.min.css")
-  %body
-
-    %div.container
-      %div.navbar
-        %div.navbar-inner
-          %div.container
-            %a.brand{href: "#"}
-              Olympics Medal Count
-      %div.medals-table
-        %table.tables.table-striped.medals.table-bordered.table-condensed{style: "margin-left: auto;margin-right: auto;text-align:center"}
-          %thead
-            %tr
-              %th
-                Flag
-              %th
-                Country
-          %tbody
-            - countries.each do |country|
-              %tr
-                %td= country.name
-                %td
-                  %img{src: "http://www.london2012.com/" + country.flagSrc}
+= partial "header"
+%div.medals-table
+  %table.tables.table-striped.medals.table-bordered.table-condensed{style: "margin-left: auto;margin-right: auto;text-align:center"}
+    %thead
+      %tr
+        %th
+          Flag
+        %th
+          Country
+    %tbody
+      - countries.each do |country|
+        %tr
+          %td= country.name
+          %td
+            %img{src: "http://www.london2012.com/" + country.flagSrc}
