Add nav bar links

--- a/views/header.haml
+++ b/views/header.haml
@@ -12,4 +12,12 @@
         %div.navbar-inner
           %div.container
             %a.brand{href: "#"}
-              Olympics Medal Count
+              Olympics 2012
+            %div.nav-collapse
+              %div.nav
+                %li
+                  %a{href: "/"}
+                    Medal count
+                %li
+                  %a{href: "/no_medal"}
+                    Countries without medal
