Add google analytics

--- a/views/header.haml
+++ b/views/header.haml
@@ -3,6 +3,8 @@
   %head
     %title Olympics
     %script{:type => "text/javascript",
+            :src  => "js/google-analytics.js"}
+    %script{:type => "text/javascript",
             :src  => "js/bootstrap.min.js"}
     %link(rel="stylesheet" href="css/bootstrap.min.css")
     %link(rel="stylesheet" href="css/bootstrap-responsive.min.css")
