--- a/views/no_medal.haml
+++ b/views/no_medal.haml
@@ -1,4 +1,4 @@
-= partial "header"
+= partial "header", :locals => {:env => env}
 %div.no-medals
   %table.tables.table-striped.medals.table-bordered.table-condensed{style: "margin-left: auto;margin-right: auto;text-align:center"}
     %tbody
