Link back to root

--- a/views/header.haml
+++ b/views/header.haml
@@ -12,7 +12,7 @@
       %div.navbar
         %div.navbar-inner
           %div.container
-            %a.brand{href: "#"}
+            %a.brand{href: "/"}
               Olympics 2012
             %div.nav-collapse
               %div.nav
