--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,4 +1,3 @@
-!!!
 %html
   %head
     %title Olympics
@@ -22,3 +21,4 @@
                 %li
                   %a{href: "/no_medal"}
                     Countries without medal
+      =yield
