--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,10 @@
+%div.count.alert.alert-info{style: "width: 300px; margin-left: auto; margin-right: auto; text-align: center"}
+  %p{style: "font-size: 120%"}
+    Countries with medals:
+    %span.number{style: "font-weight: bold"}
+      = medal_count.count
 %div.medals-table
-  %table.tables.table-striped.medals.table-bordered.table-condensed{style: "margin-left: auto;margin-right: auto;text-align:center"}
+  %table.tables.table-striped.medals.table-bordered.table-condensed{style: "margin-left: auto;margin-right: auto;text-align:center; font-size: 14px"}
     %thead
       %tr
         %th
