Added medal count by continent

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,4 +21,7 @@
                 %li
                   %a{href: "/no_medal"}
                     Countries without medal
+                %li
+                  %a{href: "/medal_by_continent"}
+                    Medal by continent
       =yield
